Bug 92082 - Crash: show Color bar, undock it, redock it, unshow it
Summary: Crash: show Color bar, undock it, redock it, unshow it
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: All All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.0.1
Keywords: bibisectRequest, regression
: 92094 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-15 09:38 UTC by Buovjaga
Modified: 2016-10-25 19:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace of crash on Windows (10.88 KB, text/plain)
2015-06-15 09:38 UTC, Buovjaga
Details
linux backtrace (28.28 KB, text/plain)
2015-06-15 10:11 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2015-06-15 09:38:47 UTC
Created attachment 116548 [details]
Backtrace of crash on Windows

1. Impress, view - toolbars - color bar.
2. Undock the thing (you might have to make it larger first to be able to grab 3. it by clicking on its pane).
4. Re-dock it (ctrl-double-clicking its pane)
5. Disable it from view - toolbars.
6. Crash.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 01a189abcd9a4ca472a74b3b2c000c9338fc2c91
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-14_07:46:28
Locale: fi-FI (fi_FI)

Ubuntu 15.04 64-bit 
Version: 5.1.0.0.alpha1+
Build ID: a9286c302e96258f32d13fb66aced25750e82cd3
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-06-13_00:35:08
Locale: en-US (en_US.UTF-8)
Comment 1 Yousuf Philips (jay) (retired) 2015-06-15 10:11:13 UTC
Created attachment 116551 [details]
linux backtrace

Crashed for me as well on master. It also crashed when i undocked it and pressed the close button in the floating window titlebar.
Comment 2 Buovjaga 2015-06-15 10:14:06 UTC
Doesn't crash in 3.5.

Ubuntu 15.04 64-bit
LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 3 Yousuf Philips (jay) (retired) 2015-06-15 12:02:15 UTC
Didnt happen to me on 4.4 daily.

Version: 4.4.4.0.0+
Build ID: 26c6602c9036e12e0d228b6f5377f47fde5a530f
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:libreoffice-4-4, Time: 2015-05-22_13:58:43
Comment 4 Yousuf Philips (jay) (retired) 2015-06-15 14:34:13 UTC
Seems its not possible to set a bug to NEW without it being assigned to you from the attachment page.
Comment 5 Commit Notification 2015-06-15 15:28:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=14aa5c58b8529f81c6ca12a18cbb77f63e27ba62

Resolves: tdf#92082 crash on closing color bar after redocking it

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-06-15 15:35:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=957c3e3d68f3824115162c85040c1a7c0251fc7f&h=libreoffice-5-0

Resolves: tdf#92082 crash on closing color bar after redocking it

It will be available in 5.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2015-06-17 08:32:01 UTC
*** Bug 92094 has been marked as a duplicate of this bug. ***
Comment 8 Robinson Tryon (qubit) 2015-12-17 09:13:46 UTC Comment hidden (obsolete)