Resolves: tdf#92082 crash on closing color bar after redocking it

Change-Id: I015306a37abeaef17830ceab0f39cb2f3a98155c